# writing-english

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scratch/: test_settings.py
scripts/: build.py  setup_dev.py
src/writing_english/: __main__.py  main.py
src/writing_english/adapters/: base.py
src/writing_english/adapters/gec/: __init__.py  base.py  dummy.py  gector_adapter.py  onnx_predictor.py  worker.py
src/writing_english/adapters/llm/: base.py  dummy.py
src/writing_english/adapters/spellcheck/: base.py
src/writing_english/app/: application.py  constants.py  context.py
src/writing_english/config/: defaults.py  settings.py
src/writing_english/core/: document.py  prompt.py  session.py
src/writing_english/editor/: editor_highlighter.py  editor_theme.py  editor_widget.py  grammar_controller.py  line_number_area.py  typing_sounds.py
src/writing_english/gui/: analysis_widget.py  focus_mode.py  icons.py  main_window.py  menu_bar.py  model_setup_dialog.py  prompt_bar.py  settings_dialog.py  status_bar.py  sticker_reward.py  system_colors.py  toolbar.py
src/writing_english/infrastructure/: autosave.py  database.py  filesystem.py  recent_files.py  updater.py
src/writing_english/plugins/: host.py  interface.py
src/writing_english/resources/styles/: dark.qss  light.qss
src/writing_english/utils/: formatters.py  validators.py
