[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writing-english"
version = "0.1.1"
description = "A focused English writing practice desktop app"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.8.0",
    "pyspellchecker>=0.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
gec = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.28.1",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "nuitka>=2.6",
]

[project.scripts]
writing-english = "writing_english.main:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
